--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,10 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <script src="bower_components/angular/angular.js"></script>
     <script src="app.js"></script>
-    <script src="home.controller.js"></script>
+    <script src="home.component.js"></script>
   </head>
-  <body ng-controller="HomeController">
-
-    <p>Nothing here {{'yet' + '!'}}</p>
-    <p>1+2 = {{1+2}}</p>
-    <ul>
-      <li ng-repeat="phone in phones">{{phone.name}}</li>
-    </ul>
+  <body>
+    <h3>Hello Index</h3>
+    <greet-user></greet-user>
   </body>
 </html>
