--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,13 @@
     <title>My HTML File</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <script src="bower_components/angular/angular.js"></script>
-    <script src="app.js"></script>
-    <script src="home.component.js"></script>
+    <script src="app.module.js"></script>
+    <script src="navbar/navbar.module.js"></script>
+    <script src="navbar/navbar.controller.js"></script>
+    <script src="navbar/navbar.component.js"></script>
   </head>
   <body>
     <h3>Hello Index</h3>
-    <greet-user></greet-user>
+    <navbar></navbar>
   </body>
 </html>
